# filter

./: CMakeLists.txt  README.md  build.bat  filter.cpp  filter.h  main.cpp
filter_multi/: README.md  filter.cpp  filter.h  main.cpp
filter_single/: filter.cpp  filter.h  main.cpp
src/UI/: main.cpp
src/filter-engine/: filter.cpp  filter.h
tests/: filter_engine_speedtest.cpp  runtests.bat
